2005-06-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/redboot_cmds.sgml: 
	* src/dump.c: Fix the usage for dump and x command.

2005-06-29  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/flash.c (find_free): Maintain sort order when splitting
	chunks.

2005-06-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/net/enet.c (ntohs): Return type is a short.

2005-06-22  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/flash.c (fis_list, fis_free, fis_create):
	* src/iomem.c (do_iopeek): Fixed compiler warnings about formats
	strings for diag_printf.

2005-06-09  David Vrabel  <dvrabel@arcom.com>

	* src/xyzModem.c: Use the Ymodem length field by #define'ing
	USE_YMODEM_LENGTH.
	(xyzModem_stream_read): Only discard runs of ^Z's if we're using
	Xmodem or the Ymodem length field is 0.  This allows binary files
	with runs of ^Z's to be transferred.

2005-06-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (_flash_info): Fixed a warning about a diag_printf
	format string.

2005-05-27  David Vrabel  <dvrabel@arcom.com>

	* src/main.c (cyg_start): Expand aliases even if
	CYGSEM_REDBOOT_FLASH_ALIASES is not enabled since there are some
	hardcoded aliases (e.g., FREEMEMLO).

2005-05-04  David Vrabel  <dvrabel@arcom.com>
 
 	* src/alias.c (lookup_alias): The expansion of FREEMEMLO and
 	FREEMEMHI needs a leading '0x' so they're recognized as hex.
 
2005-04-21  Ian Campbell  <icampbell@arcom.com>

	* src/net/net_io.c (net_init): Don't initialize the network if we
	don't have an IP address.

	* src/net/net_io.c (do_ip_addr): Add a '-b' option to obtain IP
	address using BOOTP/DHCP.

	* doc/redboot_cmds.sgml: Document the new '-b' option to the
	'ip_address' command.

	* src/decompress.c (zcfree): Remove unnecessary variable
        reinitialisation.

	
2005-04-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/alias.c (lookup_alias): Fix compiler warnings about formats
	* src/cksum.c (do_cksum): Ditto
	* src/dump.c  (do_dump): Ditto	

2005-04-07  Peter Korsgaard  <jacmet@sunsite.dk>
